# chem-trie

./: Cargo.toml  README.md  cleanup.sh  elements.csv
src/: elements.rs  lib.rs  main.rs  trie.rs
