[package]
name = "chemes-trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
owo-colors = "3.4.0"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
